--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,33 @@ html, body {
 }
 
 body {
-
+    display: grid;
+    grid-template-columns: 100%;
+    justify-items: center;
+    align-items: center;
 }
 section#upscaler {
+    padding: 1em;
+    border-radius: 0.5em;
     background: rgba(128, 128, 128, 0.5);
     display: grid;
     grid-template-columns: 100%;
+    max-height: 100%;
+}
+
+section#upscaler #status {
+    background-color: grey;
+    padding: .5em 1em .5em 1em;
+    justify-self: center;
+    width: 100%;
+}
+
+section#upscaler #status[data-condition="running"] {
+    background-color: green;
+}
+
+section#upscaler #status[data-condition="error"] {
+    background-color: red;
 }
 
 section#upscaler #previewPane {
@@ -18,13 +39,15 @@ section#upscaler #previewPane {
     grid-template-rows: 100%;
 }
 
-section#upscaler #previewPane > * {
-    grid-column: 1 / -1;;
-    grid-row: 1 / -1;
+section#upscaler .peak {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 1em;
     border: 0;
+    overflow-x: auto;
+    overflow-y: auto;
+    max-height: 80vh;
+    max-width: 80vw;
 }
 
 section#upscaler #previewPane img {
