--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,15 @@ section#upscaler {
     display: grid;
     grid-template-columns: 100%;
     max-height: 100%;
+    
 }
 
 section#upscaler #status {
     background-color: grey;
     padding: .5em 1em .5em 1em;
     justify-self: center;
-    width: 100%;
+    width: 101%;
+    border-radius: 0.2em;
 }
 
 section#upscaler #status[data-condition="running"] {
